# cpp-stack-portfolio

./: .gitignore  CMakeLists.txt  Makefile  README.md  website
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  builder.cpp  handler.cpp  website.cpp
src/builder/: builder.cpp  builder.h
src/handler/: CMakeLists.txt  handler.cpp  handler.h
statics/models/: index-content.json
templates/: base.html  index.html
